Fix paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MonoMachine Web Rebuild</title>
-  <link rel="stylesheet" href="/static/style.css" />
+<!-- CSS -->
+<link rel="stylesheet" href="static/style.css">
+
+<!-- JS -->
+<script src="static/main.js/audioEngine.js"></script>
+<script src="static/main.js/main.js"></script>
+<script src="static/main.js/sequencer.js"></script>
+<script src="static/main.js/ui.js"></script>
 
 </head>
 <body>
