Fix script tags for ES modules

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <link rel="stylesheet" href="static/style.css">
 
 <!-- JS -->
-<script src="static/main.js/audioEngine.js"></script>
-<script src="static/main.js/main.js"></script>
-<script src="static/main.js/sequencer.js"></script>
-<script src="static/main.js/ui.js"></script>
+<script type="module" src="static/main.js/main.js"></script>
+<script type="module" src="static/main.js/sequencer.js"></script>
+<script type="module" src="static/main.js/ui.js"></script>
+<script type="module" src="static/main.js/audioEngine.js"></script>
 
 </head>
 <body>
