Added drive feature to audio engine

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
         <input type="range" id="stepRelease" min="0" max="2" step="0.01" />
         <label>Release</label>
       </div>
+      <div class="knob">
+        <input type="range" min="0" max="1" step="0.01" value="0" class="drive-knob">
+        <label>Drive</label>
+      </div>
     </div>
 
   </aside>
